# ticketmaster_city

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ticketmaster_city/: __init__.py  ticketmaster_city.py
tests/: test_ticketmaster_city.py
