[tool.poetry]
name = "ticketmaster_city"
version = "0.1.0"
description = "package to see what kind of concerts are in a city based on TicketMasterAPI"
authors = ["Lisa Carle"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
